[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "gwtc3_psds"
dynamic = ["version"] # scm versioning (using tags)
requires-python = ">=3.9"
description = "gwtc3_psds"
readme = "README.rst"
authors = [
    { name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "gwpy",
    "bilby",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8>=5.0.4",
    "black>=22.12.0",
    "black[jupyter]>=22.12.0",
    "isort",
    "mypy",
    "jupyter-book",
    "pre-commit",
    "gwpy>=1.3.0",
]

[tool.setuptools_scm]
version_file = "src/gwtc3_psds/_version.py"

[tool.semantic_release]
version_variable = "src/gwtc3_psds/_version.py:__version__"
version_source = "commit"
commit_version_number = true
commit_subject = "chore(release): {version}"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
no_local_version = true


[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.rst"



[tool.setuptools]
package-data = { "gwtc3_psds" = [""] }

[tool.setuptools.packages.find]
where = ["src"]



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = [
    "gwtc3_psds"
]

[tool.coverage.paths]
source = [
    "src/gwtc3_psds",
    "**/site-packages/gwtc3_psds"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplentedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

ignore_errors = true

[tool.coverage.html]
title = "gwtc3_psds Coverage Test Report"


[[tool.mypy.overrides]]
module = "matplotlib.*,scipy.*,numba.*,bilby.*"
ignore_missing_imports = true



[project.scripts]
gwtc3_psds = "gwtc3_psds.main:main"
make_gwtc3_psd_website = "gwtc3_psds.deploy_website:main"